platform/android/gradle_compile_release.log
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.4/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
Warning: SDK processing. This version only understands SDK XML versions up to 3 but an SDK XML file of version 4 was encountered. This can happen if you use versions of Android Studio and the command-line tools that were released at different times.

> Task :app:downloadBundledCores
Bundled core already present: C:\Users\fperez\Documents\Software Projects\snes-online\platform\android\app\src\main\assets\cores\snes9x_libretro_android.so

> Task :app:preBuild
> Task :app:preReleaseBuild
> Task :app:javaPreCompileRelease UP-TO-DATE
> Task :app:checkReleaseAarMetadata UP-TO-DATE
> Task :app:generateReleaseResValues UP-TO-DATE
> Task :app:mapReleaseSourceSetPaths UP-TO-DATE
> Task :app:generateReleaseResources UP-TO-DATE
> Task :app:mergeReleaseResources UP-TO-DATE
> Task :app:packageReleaseResources UP-TO-DATE
> Task :app:parseReleaseLocalResources UP-TO-DATE
> Task :app:createReleaseCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksRelease UP-TO-DATE
> Task :app:processReleaseMainManifest UP-TO-DATE
> Task :app:processReleaseManifest UP-TO-DATE
> Task :app:processReleaseManifestForPackage UP-TO-DATE
> Task :app:processReleaseResources UP-TO-DATE

> Task :app:compileReleaseJavaWithJavac
C:\Users\fperez\Documents\Software Projects\snes-online\platform\android\app\src\main\java\com\snesonline\ConfigActivity.java:594: error: cannot find symbol
        updateStateUi();
        ^
  symbol:   method updateStateUi()
  location: class ConfigActivity
C:\Users\fperez\Documents\Software Projects\snes-online\platform\android\app\src\main\java\com\snesonline\ConfigActivity.java:654: error: cannot find symbol
        updateStateUi();
        ^
  symbol:   method updateStateUi()
  location: class ConfigActivity
C:\Users\fperez\Documents\Software Projects\snes-online\platform\android\app\src\main\java\com\snesonline\ConfigActivity.java:748: error: cannot find symbol
            } else if (requestCode == REQ_PICK_STATE) {
                                      ^
  symbol:   variable REQ_PICK_STATE
  location: class ConfigActivity
C:\Users\fperez\Documents\Software Projects\snes-online\platform\android\app\src\main\java\com\snesonline\ConfigActivity.java:766: error: cannot find symbol
                if (editStatePath != null) editStatePath.setText(out);
                    ^
  symbol:   variable editStatePath
  location: class ConfigActivity
C:\Users\fperez\Documents\Software Projects\snes-online\platform\android\app\src\main\java\com\snesonline\ConfigActivity.java:766: error: cannot find symbol
                if (editStatePath != null) editStatePath.setText(out);
                                           ^
  symbol:   variable editStatePath
  location: class ConfigActivity
C:\Users\fperez\Documents\Software Projects\snes-online\platform\android\app\src\main\java\com\snesonline\ConfigActivity.java:767: error: cannot find symbol
                getSharedPreferences(PREFS, MODE_PRIVATE).edit().putString(PREF_STATE_PATH, out).apply();
                                                                           ^
  symbol:   variable PREF_STATE_PATH
  location: class ConfigActivity
Note: C:\Users\fperez\Documents\Software Projects\snes-online\platform\android\app\src\main\java\com\snesonline\GameActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors

> Task :app:compileReleaseJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 27s
15 actionable tasks: 2 executed, 13 up-to-date
